# status_manager_bot

./: .env  .gitignore  README.RU.md  README.md  main.py  pyproject.toml
data/: important_info.txt  registration_data.txt
data/parsing/: raw_data.txt  raw_statuses.txt
src/status_control_bot/: az_bot.py  az_teacher_data_handler.py  config.py  rate_limiter.py  ui_text.py  utils.py
